# candypi

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: fedimint.rs  main.rs
