[package]
name = "candypi"
version = "0.1.0"
edition = "2024"

[dependencies]
st7735-lcd = { version = "0.10", features = ["graphics"] }
rppal = { version = "0.19", features = ["embedded-hal"] }
qrcode = { version = "0.14", features = ["image"] }
embedded-graphics = "0.8"
image = "0.25"
imageproc = "0.25"
