[package]
name = "candypi"
version = "0.1.0"
edition = "2024"

[dependencies]
st7735-lcd = { version = "0.10", features = ["graphics"] }
rppal = { version = "0.19", features = ["embedded-hal"] }
qrcode = { version = "0.14", features = ["image"] }
embedded-graphics = "0.8"
image = "0.25"
imageproc = "0.25"

fedimint-bip39 = "0.9.0"
fedimint-core = "0.9.0"
fedimint-client = "0.9"
fedimint-mint-client = "0.9"
fedimint-ln-client = "0.9.0"
fedimint-meta-client = "0.9.0"
fedimint-rocksdb = "0.9.0"
futures-lite = "2.6.1"
lightning-invoice = "0.33.2"
xdg = "3"
tokio = "1.48.0"

[profile.release]
opt-level = 1       # Minimal optimization for fast builds and compatibility
lto = false         # No LTO for faster linking